# ffr-vrs-vklayer

./: Cargo.toml  flake.nix  justfile
crates/ffr-core/: Cargo.toml
crates/ffr-core/src/: config.rs  foveation.rs  lib.rs  math.rs  rate.rs  wire.rs
crates/ffr-openxr-layer/: Cargo.toml
crates/ffr-openxr-layer/src/: layer.rs  lib.rs  logging.rs  xr_sys.rs
crates/ffr-registry/: Cargo.toml
crates/ffr-registry/src/: lib.rs
crates/ffr-shared/: Cargo.toml
crates/ffr-shared/src/: lib.rs
crates/ffr-test-app/: Cargo.toml  build.rs
crates/ffr-test-app/shaders/: cube.frag  cube.vert  fullscreen.vert  rate_vis.frag
crates/ffr-test-app/src/: main.rs
crates/ffr-vulkan-layer/: Cargo.toml  build.rs
crates/ffr-vulkan-layer/shaders/: rate_overlay.frag
crates/ffr-vulkan-layer/src/: layer.rs  lib.rs  logging.rs  vk_sys.rs
manifests/: VkLayer_FFR_VRS.json.in  XrApiLayer_FFR_VRS.json.in
nix/: devshell.nix
nix/checks/: clippy.nix  tests.nix
nix/lib/: default.nix
