[workspace]
resolver = "2"
members = [
    "crates/ffr-core",
    "crates/ffr-shared",
    "crates/ffr-registry",
    "crates/ffr-openxr-layer",
    "crates/ffr-vulkan-layer",
    "crates/ffr-test-app",
]

# Names the workspace for crane (it builds the whole workspace, so there's no
# single root package to infer a name from). Silences the "placeholder value"
# warning on every nix invocation.
[workspace.metadata.crane]
name = "ffr-vrs-layers"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.95"

[workspace.dependencies]
# Internal
ffr-core = { path = "crates/ffr-core" }
ffr-registry = { path = "crates/ffr-registry" }

# Graphics / XR bindings (wired in per-milestone)
ash = "0.38"
openxr-sys = "0.11"
# vulkan_layer (google/vk-layer-for-rust) is added at M1 once its git rev is pinned.

# State / utility
once_cell = "1"
libc = "0.2"
libloading = "0.8"

# Logging — to file, never stdout (layers run inside arbitrary hosts)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
# Layers are loaded into other processes; keep them lean and debuggable.
debug = 1
